--- a/style.css
+++ b/style.css
@@ -9,15 +9,18 @@ body {
     flex: 1 1 auto;
   }
 
-.column div {
+.gridColumn {
     display: flex;
     flex-direction: column;
 
 }
 
-.row div {
+.gridRow {
     display: flex;
     flex-direction: row;
 
 }
 
+.square div {
+    display: flex;   
+}
