--- a/style.css
+++ b/style.css
@@ -2,22 +2,28 @@ body {
     display: flex;
 }
 
-.grid div {
-    background: peachpuff;
-    border: 4px solid brown;
-    height: 80px;
-    flex: 1 1 auto;
-  }
-
-.gridColumn {
+.container {
     display: flex;
-    flex-direction: column;
-
+    height: 50px;
+    width: 50px;
+    background-color: yellow;
 }
 
 .gridRow {
-    display: flex;
     flex-direction: row;
+    border: 1px solid black;
+    height: 50px;
+    width: 50px;
+    background-color: yellow;
+
+}
+
+.gridColumn {
+    flex-direction: column;
+    border: 1px solid black;
+    height: 50px;
+    width: 50px;
+    background-color: yellow;
 
 }
 
