--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 body {
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .container {
     display: flex;
-    height: 50px;
-    width: 50px;
+    align-items: center;
     background-color: yellow;
 }
 
 .gridRow {
     flex-direction: row;
-    border: 1px solid black;
     height: 50px;
     width: 50px;
 
@@ -23,9 +23,12 @@ body {
     height: 50px;
     width: 50px;
     background-color: yellow;
-
 }
 
-.square div {
-    display: flex;   
+.hover {
+    flex-direction: column;
+    border: 1px solid black;
+    height: 50px;
+    width: 50px;
+    background-color: black;
 }
