--- a/style.css
+++ b/style.css
@@ -22,20 +22,17 @@ body {
 }
 
 .hover {
-    flex-direction: column;
-    border: 1px solid black;
+    /* flex-direction: column;
+    border: 1px solid black; */
     background-color: black;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
 }
 
 .randomColor {
     flex-direction: column;
     border: 1px solid black;
-    height: 50px;
-    width: 50px;
-    background-color: green;
+    box-sizing: border-box;
 }
-
 
 #sizeOfGrid {
     margin-bottom: 25px;
