--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 .container {
     display: flex;
     border: 5px solid black;
-    background-color: yellow;
+    background-color: white;
 }
 
 .gridRow {
@@ -19,13 +19,6 @@ body {
     border: 1px solid black;
     background-color: white;
     box-sizing: border-box;
-}
-
-.hover {
-    /* flex-direction: column;
-    border: 1px solid black; */
-    background-color: black;
-    /* box-sizing: border-box; */
 }
 
 .randomColor {
