--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@ body {
     align-items: center;
 }
 
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+#buttonMenu {
+    gap: 25px;
+}
+
 .container {
     display: flex;
     border: 5px solid black;
