--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ h1 {
 }
 
 #buttonMenu {
-    gap: 25px;
+    display: flex;
+    gap: 20px;
+    margin-bottom: 25px;
 }
 
 .container {
@@ -34,9 +36,5 @@ h1 {
     flex-direction: column;
     border: 1px solid black;
     box-sizing: border-box;
-}
-
-#sizeOfGrid {
-    margin-bottom: 25px;
 }
 
